--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -121,5 +124,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "eae8aaf1-3608-45c3-b83e-56480b912579"
   }
 }
